feature: add getPostById route
