# src/routes/post.routes.ts
@@ -1,5 +1,5 @@
 import { Router } from "express";
-import { createNewPost, deletePostById, getPosts, updatePostById } from "../controllers/post.controllers";
+import { createNewPost, deletePostById, getPostByIdReq, getPosts, updatePostById } from "../controllers/post.controllers";
 import { ensureAuth } from "../middlewares/ensureAuth";
 
 export const postRouter = Router()
@@ -7,5 +7,6 @@ export const postRouter = Router()
 postRouter.use(ensureAuth)
 postRouter.post('/create', createNewPost)
 postRouter.get('/', getPosts)
+postRouter.get('/postById/:post_id', getPostByIdReq)
 postRouter.patch('/:post_id', updatePostById)
 postRouter.delete('/:post_id', deletePostById)
